<resources>
    <string name="app_name">Six Days Workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday_day_1">First Day</string>
    <string name="tuesday_day_2">Second Day</string>
    <string name="wednesday_day_3">Third Day</string>
    <string name="thursday_day_4">Fourth Day</string>
    <string name="friday_day_5">Fifth Day</string>
    <string name="saturday_day_6">Sixth Day</string>
    <string name="abs">Abs</string>
    <string name="chest">Chest</string>
    <string name="triceps">Triceps</string>
    <string name="legs">Legs</string>
    <string name="back">Back</string>
    <string name="biceps">Biceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="close_button">close button</string>

</resources>